# Old-Age-of-Great-Beginnings

./: README.md
Base-C-PLUS-PLUS/: .clang-format  yandex.sln
Base-C-PLUS-PLUS/arifmetic/: arifmetic.vcxproj  arifmetic.vcxproj.filters  arifmetic_progress.cpp
Base-C-PLUS-PLUS/convert/: conver_cm_to_inch.cpp  convert.vcxproj  convert.vcxproj.filters
Base-C-PLUS-PLUS/queen/: queen.vcxproj  queen.vcxproj.filters  queen_move.cpp
Base-C-PLUS-PLUS/right_triangle/: right_triangle.cpp  right_triangle.vcxproj  right_triangle.vcxproj.filters
Base-C-PLUS-PLUS/test/: test.vcxproj  test.vcxproj.filters
Base-C-PLUS-PLUS/title/: cout_title.cpp  title.vcxproj  title.vcxproj.filters
Base-C-PLUS-PLUS/yandex/: Source.cpp  sum_two_number.cpp  yandex.vcxproj  yandex.vcxproj.filters
CAD_Exchanger_Test/: .gitignore  CMakeLists.txt  README.md  main.cpp
Firework/: .clang-format  .gitignore  CMakeLists.txt  README.md
Firework/cmake/: setup.cmake
Firework/src/: CMakeLists.txt  FireworkApp.cpp  FireworkApp.h  MenuWindow.cpp  MenuWindow.h  Particle.cpp  Particle.h  main.cpp
LearningCPlusPlus/: .gitattributes  .gitignore  CMakeLists.txt  README.md
LearningCPlusPlus/scripts/: build-linux-clang.sh  build-linux.sh  build-windows.bat  clang-format-all.sh  cmake-windows.bat  rebuild-linux-clang.sh  rebuild-linux.sh
LearningCPlusPlus/src/: 1.10.cpp  1.11.cpp  1.12.cpp  1.14_10_.cpp  1.14_11_.cpp  1.14_9_.cpp  1.16.cpp  1.17.cpp  1.19.cpp  1.2.cpp  1.20.cpp  1.21.cpp  1.22.cpp  1.24.cpp  1.25.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.9.cpp  2.18.cpp  2.3.cpp  2.8.cpp  3.10.cpp  3.14.cpp  3.15.cpp  3.16.cpp  3.1_10.cpp  3.1_12.cpp  3.1_9.cpp  3.2.1.cpp  3.2.cpp  3.4.cpp  3.5.cpp  3.6.cpp  CMakeLists.txt  Sales_item.h
Lesta_Games_task/: Lesta_Games_task.txt  README.md
Miner Dia/: ethminer.dia  xmrig1.dia
MrSteelRat_Pixel_fairy_bot/: .gitmodules  README.md
PBF_CS/: .gitignore  CMakeLists.txt  Readme.md  build.sh
PBF_CS/Client/: CMakeLists.txt  Client.cpp  Client.h
PBF_CS/Server/: CMakeLists.txt  Server.cpp  Server.h
Phobeus/: .gitignore  CMakeLists.txt  Phobeus_en_GB.ts  main.cpp  phobeus.cpp  phobeus.h  phobeus.ui
Study-OpenGL/: .gitmodules  CMakeLists.txt  README.md
Study-OpenGL/scripts/: clang-format-all.sh  rebuild-linux-clang.sh
Study-OpenGL/src/: CMakeLists.txt
Study-OpenGL/src/2/: listing_2.1.cpp  listing_2.10.cpp  listing_2.15.cpp  listing_2.16.cpp  listing_2.2.cpp  listing_2.5.cpp  listing_2.6.cpp  listing_2.7.cpp  listing_2.8.cpp  listing_2.9.cpp
Study-OpenGL/src/sample/: CMakeLists.txt  sample_2_2_1.cpp  sample_2_2_2.cpp  sample_2_2_3.cpp  sample_2_3_3.cpp
Test-Task-C_C----linux--Paragon/: .clang-format  .clang-tidy  .gitignore  Makefile  README.MD  cache_lru.c  cache_lru.h  tests.c
Test-Task-C_C----linux--Paragon/linux-utils/: container_of.h  list.h  rbtree.c  rbtree.h  rbtree_augmented.h  rbtree_types.h
Tetris/: .gitignore  CMakeLists.txt  README.md  Tetris.qmlproject  gamescreen.cpp  gamescreen.h  gamescreen.ui  mainmenu.cpp  mainmenu.ui  mainmenugame.cpp  mainmenugame.h  mainmenugame.ui  qmlmodules
Tetris/content/: App.qml  Screen01.ui.qml
Tetris/imports/: CMakeLists.txt
Tetris/imports/Tetris/: CMakeLists.txt  qmldir
Tetris/imports/Tetris/designer/: plugin.metainfo
Tetris/src/: import_qml_plugins.h
cube/: .gitignore  settings.gradle.kts
cube/app/: build.gradle.kts
cube/app/src/androidTest/java/com/example/cube/: ExampleInstrumentedTest.java
cube/app/src/main/: AndroidManifest.xml
cube/app/src/main/cpp/: CMakeLists.txt  openglrenderer.cpp
cube/app/src/main/java/com/example/cube/: MainActivity.java
cube/app/src/main/res/values/: themes.xml
cube/app/src/main/res/values-night/: themes.xml
cube/gradle/wrapper/: gradle-wrapper.properties
hge-openal/: .clang-format  .gitignore  CMakeLists.txt
hge-openal/src/: main.cpp
zip_install/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
